Run e2e test and it will never finish, because it waits for $timeout, see controllers.js.

--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -1,1 +1,3 @@
 <p>This is the partial for view 1.</p>
+<p> i = {{i}} (imagine I am fetching data from server periodically)</p>
+<p> I am not going anywhere... </p>
